<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rudy.bmicalculator.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.rudy.bmicalculator.MainActivity">

            <Button
                android:id="@+id/authorButton"
                android:layout_width="89dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:onClick="authorButtonOnClick"
                android:text="@string/author"
                app:layout_constraintBottom_toTopOf="@+id/massEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/massTextView"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:gravity="start"
                android:text="@string/mass"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/massEditText"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/massTextView" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="137dp"
                android:layout_height="41dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:gravity="start"
                android:text="@string/height"
                android:textAlignment="viewStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/massEditText" />

            <EditText
                android:id="@+id/heightEditText"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightTextView" />

            <Button
                android:id="@+id/calculateBMIButton"
                android:layout_width="345dp"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:onClick="calculateBMIButtonOnClick"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

            <TextView
                android:id="@+id/displayTextView"
                android:layout_width="336dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calculateBMIButton" />

            <Switch
                android:id="@+id/unitSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/switch_text_si"
                android:onClick="switchOnClick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayTextView"
                android:layout_marginRight="8dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
